# Walk_over_to_Django

D-wrk/: Calculate the radius of the planet.py  Fake Bootcamp.html  leap year.py  log 2.py  log in prog.py
D_test/: Backend Bootcamp.html  Index.html  bootcamp.html  css hero.txt  hero section.html  html hero.txt  index 2.html  index.html  index____.html  indx 2.html  java hero.txt  prac 12.html
D_test/Backend Bootcamp_files/: bootcamp.html
D_test/css/: style.css
D_test/js/: scripts.js
D_test/scss/: style.scss
Django_1/source/: db.sqlite3  manage.py
Django_1/source/Pages/: views.py
Django_1/source/Products/: asgi.py  settings.py  urls.py  wsgi.py
Django_1/source/Sales/: admin.py  apps.py  forms.py  models.py  views.py
Django_1/source/templates/: about.html  contact.html  home.html  sales.html
Django_2/source/: db.sqlite3
Django_2/source/Polls/: models.py
Django_2/source/mysite/: settings.py
Django_3/source/: db.sqlite3
Django_3/source/Mysite/: settings.py  urls.py
My_SIte/Source/: db.sqlite3
My_Site/Source/: db.sqlite3
S_dan/Scr/: db.sqlite3  manage.py
VEM/source/: db.sqlite3
django-Polls/: README.rst  pyproject.toml
django_login/Login/: db.sqlite3  manage.py
django_project/: db.sqlite3
django_project/blog/: models.py  urls.py  views.py
django_project/django_project/: settings.py  urls.py
django_project/users/: forms.py  models.py  signals.py  views.py
snippest/__MACOSX/: ._website-menu-01
snippest/huddle-intro-section-master/: README.md  index.html  styles.css
snippest/website-menu-01/: index.html
(+246 files in other folders)
