[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools/build_meta:__legacy__'
[metadata]
name = django-polls
version = 0.1
description = A Django app to conduct Web-based Polls.
long_description = files: README.rst
url = https://www.facebook.com
author = Simon Gideon
license = BSD-3-Clause.
Classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django:: X.Y
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= X.Y